--- a/linguagem-de-programação/23-09-01-exer1.html
+++ b/linguagem-de-programação/23-09-01-exer1.html
@@ -228,6 +228,15 @@
                 <br>mostrando as posições que apareceram.
             </span>
         </div>
+        <div class="divbutton">
+            <br><button type="button" onclick="exe(5)"> Exercício 5 </button>
+            <span class="tooltiptext">Uma escola deseja saber se existem alunos cursando, simultaneamente,
+                <br>as disciplinas de lógica e linguagem de programação.
+                <br>- Coloque os números das matrículas dos alunos que cursam lógica em um vetor, quinze alunos.
+                <br>- Coloque os números das matrículos dos alunos que cursam linguagem de programação em outro vetor, dez alunos.
+                <br>- Mostre o número de matrículas que aparecem nos dois vetores.
+            </span>
+        </div>
         <div class="output">
             <p id="output1"></p>
             <p id="output2"></p>
