--- a/GraficdoExcel/index.html
+++ b/GraficdoExcel/index.html
@@ -167,7 +167,7 @@
                             aria-expanded="false"> <i class="menu-icon fa fa-cog"></i>Questões</a>
                         <ul class="sub-menu children dropdown-menu">
                             <li><i class="fa fa-check-square"></i> <a id="selQuest">Selecionar Questões</a></li>
-                            <li><i class="fa  fa-cogs"></i><a>Modificar Gráficos</a></li>
+                            <!--<li><i class="fa  fa-cogs"></i><a>Modificar Gráficos</a></li>-->
                         </ul>
                     </li>
                     <li class="menu-item-has-children dropdown">
@@ -189,7 +189,7 @@
                                     Desenvolvimento de Software Multiplataforma</a></li>
                             <li><i class="menu-icon fa fa-plus-square-o"></i><a id="GPI">Gestão da
                                     Produção Industrial</a></li>
-                            <li><i class="menu-icon fa fa-plus-square-o"></i><a id="RH">Gestão de
+                            <li><i class="menu-icon fa fa-plus-square-o"></i><a id="GRH">Gestão de
                                     Recursos Humanos</a></li>
                             <li><i class="menu-icon fa fa-plus-square-o"></i><a id="todosCursos">Todos os cursos</a>
                             </li>
