--- a/GraficdoExcel/index.html
+++ b/GraficdoExcel/index.html
@@ -204,15 +204,19 @@
     <!-- Right Panel -->
     <div id="right-panel" class="right-panel">
         <!-- Header-->
-        <header id="header" class="header">
-            <div class="top-left">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="./"><img
-                            src="https://site.fatecfranca.edu.br/images/logo-fatec-franca-enade4.png" width="50%"
+        <header id="header" class="header bg-danger">
+            <div class="top-left bg-danger">
+                <div class="navbar-header bg-danger">
+                    <a class="navbar-brand"><img
+                            src="images/fatec-logo.png" width="50%"
                             height="50%" alt="Logo"></a>
-                    <a class="navbar-brand hidden" href="./"><img src="images/logo2.png" alt="Logo"></a>
+                    <a class="navbar-brand hidden"><img src="images/fatec-logo.png" alt="Logo" width="50%"
+                        height="50%"></a>
                     <a id="menuToggle" class="menutoggle"><i class="fa fa-bars"></i></a>
                 </div>
+            </div>
+            <div class="nav justify-content-end">
+                <img class="" src="images/logo-cps.png" width="80" height="54">
             </div>
             <div class="top-right">
                 <div class="header-menu">
