--- a/GraficdoExcel/index.html
+++ b/GraficdoExcel/index.html
@@ -166,7 +166,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false"> <i class="menu-icon fa fa-cog"></i>Questões</a>
                         <ul class="sub-menu children dropdown-menu">
-                            <li><i class="fa fa-check-square"></i> <a id="selQuest">Selecionar Questões</a></li>
+                            <li><i class="fa fa-check-square"></i><a id="selQuest">Selecionar</a></li>
                             <!--<li><i class="fa  fa-cogs"></i><a>Modificar Gráficos</a></li>-->
                         </ul>
                     </li>
@@ -183,14 +183,11 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false"> <i class="menu-icon fa fa-th"></i>Cursos</a>
                         <ul class="sub-menu children dropdown-menu">
-                            <li><i class="menu-icon fa fa-plus-square-o"></i><a id="ADS">Análise e
-                                    Desenvolvimento de Sistemas</a></li>
+                            <li><i class="menu-icon fa fa-plus-square-o"></i><a id="ADS">ADS</a></li>
                             <li><i class="menu-icon fa fa-plus-square-o"></i><a id="DSM">
-                                    Desenvolvimento de Software Multiplataforma</a></li>
-                            <li><i class="menu-icon fa fa-plus-square-o"></i><a id="GPI">Gestão da
-                                    Produção Industrial</a></li>
-                            <li><i class="menu-icon fa fa-plus-square-o"></i><a id="GRH">Gestão de
-                                    Recursos Humanos</a></li>
+                                    DSM</a></li>
+                            <li><i class="menu-icon fa fa-plus-square-o"></i><a id="GPI">GPI</a></li>
+                            <li><i class="menu-icon fa fa-plus-square-o"></i><a id="GRH">GRH</a></li>
                             <li><i class="menu-icon fa fa-plus-square-o"></i><a id="todosCursos">Todos os cursos</a>
                             </li>
                         </ul>
