--- a/GraficdoExcel/index.html
+++ b/GraficdoExcel/index.html
@@ -172,11 +172,11 @@
                     </li>
                     <li class="menu-item-has-children dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Turmas</a>
+                            aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Períodos</a>
                         <ul class="sub-menu children dropdown-menu">
                             <li><i class="fa fa-id-badge"></i><a id="selMatutino">Matutino</a></li>
                             <li><i class="fa fa-id-badge"></i><a id="selNoturno">Noturno</a></li>
-                            <li><i class="fa fa-id-badge"></i><a id="selTodas">Todas as Turmas</a></li>
+                            <li><i class="fa fa-id-badge"></i><a id="selTodas">Todas os períodos</a></li>
                         </ul>
                     </li>
                     <li class="menu-item-has-children dropdown">
