--- a/GraficdoExcel/index.html
+++ b/GraficdoExcel/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Trabalho Roland</title>
-    <meta name="description" content="Ela Admin - HTML5 Admin Template">
+    <meta name="description" content="Questionário Sócio-Econômico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="https://site.fatecfranca.edu.br/templates/f109-2017/favicon.ico">
