--- a/GraficdoExcel/index.html
+++ b/GraficdoExcel/index.html
@@ -157,7 +157,7 @@
                         <label class="custom-file-upload">
                             <i class="menu-icon fa fa-upload" id="teste"></i>
                             <input id="fileUpload" type="file" accept=".xls,.xlsx" />
-                            </i>Fazer UpLoad
+                            </i>Fazer Upload
                         </label>
                         <!-- <a href="index.html"><i class="menu-icon fa fa-laptop"></i>Dashboard </a>-->
                     </li>
