--- a/GraficoExcel/index.html
+++ b/GraficoExcel/index.html
@@ -412,7 +412,7 @@
             .addEventListener("click", function () {
                 createAnswer();
                 createSetCounter();
-                filterData("Análise e Desenvolvimento de Sistemas (ADS)");
+                //filterData("Análise e Desenvolvimento de Sistemas (ADS)");
                 createGraphs();
             });
 
