--- a/GraficoExcel/index.html
+++ b/GraficoExcel/index.html
@@ -421,7 +421,7 @@
             .addEventListener("click", function () {
                 createAnswer();
                 createSetCounter();
-                filterData("Desenvolvimento de Software Multiplataforma");
+                //filterData("Desenvolvimento de Software Multiplataforma");
                 createGraphs();
             });
 
