--- a/GraficoExcel/index.html
+++ b/GraficoExcel/index.html
@@ -430,7 +430,7 @@
             .addEventListener("click", function () {
                 createAnswer();
                 createSetCounter();
-                filterData("Gestão da Produção Industrial");
+                //filterData("Gestão da Produção Industrial");
                 createGraphs();
             });
 
