--- a/GraficoExcel/index.html
+++ b/GraficoExcel/index.html
@@ -439,7 +439,7 @@
             .addEventListener("click", function () {
                 createAnswer();
                 createSetCounter();
-                filterData("Gestão de Recursos Humanos");
+                //filterData("Gestão de Recursos Humanos");
                 createGraphs();
             });
 
