--- a/GraficoExcel/index.html
+++ b/GraficoExcel/index.html
@@ -642,7 +642,7 @@
                     if (Number(counter[i]) > gValue) {
                         gValue = counter[i];
                         gIndice = i;
-                        console.log("teste gIndice " + gIndice)
+                        //console.log("teste gIndice " + gIndice)
                     }
                     if (counter[i] < mValue) {
                         mValue = counter[i];
