--- a/Chat/public/index.html
+++ b/Chat/public/index.html
@@ -7,6 +7,8 @@
 <body>
 	<h1 id="page-title">Teste</h1>
 	<button id="load-data">Click Here to Load the Data</button>
+	<p>Please go to <a href="04-06-01-exer2.html">exercício</a>.</p>
+	<p>Please go to <a href="chat.html">chat</a>.</p>
 	<script src="main.js"></script>
 </body>
 </html>
