--- a/nodejs-ajax-crud-master/src/public/index.html
+++ b/nodejs-ajax-crud-master/src/public/index.html
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Frontend</title>
-  </head>
-  <body>
 
-    <h1>Ajax Tutorial</h1>
+<head>
+  <meta charset="UTF-8">
+  <title>Frontend</title>
+</head>
 
-    <button id="getProducts">
-      Get Products
-    </button>
+<body>
 
-    <form id="productForm">
-      <input type="text" id="newProduct">
-      <button type="submit">Create Product</button>
-    </form>
+  <h1>Ajax Tutorial</h1>
 
-    <table>
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Name</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+  <button id="getProducts">
+    Get Products
+  </button>
 
-    <!--jQuery-->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.min.js"
-      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-    <!--App -->
-    <script src="app.js"></script>
+  <form id="productForm">
+    <input type="text" id="newProduct">
+    <button type="submit">Create Product</button>
+  </form>
+
+  <table>
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
+  <!--jQuery-->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <!--App -->
+  <script src="app.js"></script>
 
 </body>
+
 </html>
