--- a/NodeJS/Chat/public/chat.html
+++ b/NodeJS/Chat/public/chat.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Frontend</title>
+    <title>Frontend Chat</title>
 </head>
 
 <body>
 
-    <h1>Ajax Tutorial</h1>
+    <h1 id='testeSSE'>Ajax Tutorial</h1>
     
     <input type="text" id="nameUser" value="Your Name">
     <button id="getMessages">Get Messages</button>
@@ -37,7 +37,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <!--App -->
-    <script src="scriptChat.js"></script>
+    <script src="scriptChatTest.js"></script>
 
 </body>
 
