--- a/DesafioVExpenses/index.html
+++ b/DesafioVExpenses/index.html
@@ -104,7 +104,7 @@
                 </div>
             </nav>
 
-            <h2>Collapsible Sidebar Using Bootstrap 4</h2>
+            <h2>Place Holder teste agenda prototype</h2>
             <!-- cards com informações dos contatos -->
             <!-- row-beginning -->
             <div class="row">
