--- a/DesafioVExpenses/index.html
+++ b/DesafioVExpenses/index.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="./style.css">
 
 </head>
-
 <body>
 
     <div class="wrapper">
@@ -72,7 +71,7 @@
         <!-- Page Content  -->
         <div id="content">
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
                 <div class="container-fluid">
 
                     <button type="button" id="sidebarCollapse" class="btn btn-dark">
@@ -111,16 +110,46 @@
                 <div class="col-lg-6 mb-3">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title">Contato 1</h4>
-                            <div class="card-text">555-555</div>
+                            <!-- tablea para organizar -->
+                            <table>
+                                <tr>
+                                    <td>
+                                        <div class="profileImage">A</div>
+                                    </td>
+                                    <td>
+                                        <h4 class="card-title">Contato 1</h4>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>
+                                        <div class="card-text">555-555</div>
+                                    </td>
+                                </tr>
+                            </table>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 mb-3">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title">Contato 2</h4>
-                            <div class="card-text">555-555</div>
+                            <!-- tablea para organizar -->
+                            <table>
+                                <tr>
+                                    <td>
+                                        <div class="profileImage">B</div>
+                                    </td>
+                                    <td>
+                                        <h4 class="card-title">Contato 2</h4>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>
+                                        <div class="card-text">555-555</div>
+                                    </td>
+                                </tr>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -131,16 +160,96 @@
                 <div class="col-lg-6 mb-3">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title">Contato 3</h4>
-                            <div class="card-text">555-555</div>
+                            <!-- tablea para organizar -->
+                            <table>
+                                <tr>
+                                    <td>
+                                        <div class="profileImage">C</div>
+                                    </td>
+                                    <td>
+                                        <h4 class="card-title">Contato 3</h4>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>
+                                        <div class="card-text">555-555</div>
+                                    </td>
+                                </tr>
+                            </table>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 mb-3">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title">Contato 4</h4>
-                            <div class="card-text">555-555</div>
+                            <!-- tablea para organizar -->
+                            <table>
+                                <tr>
+                                    <td>
+                                        <div class="profileImage">D</div>
+                                    </td>
+                                    <td>
+                                        <h4 class="card-title">Contato 4</h4>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>
+                                        <div class="card-text">555-555</div>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- row-end -->
+            <!-- row-beginning -->
+            <div class="row">
+                <div class="col-lg-6 mb-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <!-- tablea para organizar -->
+                            <table>
+                                <tr>
+                                    <td>
+                                        <div class="profileImage">C</div>
+                                    </td>
+                                    <td>
+                                        <h4 class="card-title">Contato 3</h4>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>
+                                        <div class="card-text">555-555</div>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 mb-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <!-- tablea para organizar -->
+                            <table>
+                                <tr>
+                                    <td>
+                                        <div class="profileImage">D</div>
+                                    </td>
+                                    <td>
+                                        <h4 class="card-title">Contato 4</h4>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>
+                                        <div class="card-text">555-555</div>
+                                    </td>
+                                </tr>
+                            </table>
                         </div>
                     </div>
                 </div>
